k8s/staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genome-almanac-api-deployment
  labels:
    app: genome-almanac-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genome-almanac-api
  template:
    metadata:
      labels:
        app: genome-almanac-api
    spec:
      containers:
      - name: genome-almanac-api
        image: gcr.io/devenv-215523/genome-almanac-api:${SERVICE_VERSION}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: genome-almanac-api-service
  labels:
    app: genome-almanac-api
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: genome-almanac-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ga-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "staging-ga-external-ip"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: "ga-api-cert"
spec:
  backend:
    serviceName: genome-almanac-api-service
    servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psychscreen-api-deployment
  labels:
    app: psychscreen-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psychscreen-api
  template:
    metadata:
      labels:
        app: psychscreen-api
    spec:
      containers:
      - name: psychscreen-api
        image: gcr.io/devenv-215523/genome-almanac-api:${SERVICE_VERSION}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: psychscreen-api-service
  labels:
    app: psychscreen-api
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: psychscreen-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: psychscreen-api-ingress-1
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "staging-psychscreen-api-external-ip"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: "psychscreen-api-cert"
spec:
  backend:
    serviceName: psychscreen-api-service
    servicePort: 80
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorbook-api-deployment
  labels:
    app: factorbook-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorbook-api
  template:
    metadata:
      labels:
        app: factorbook-api
    spec:
      containers:
      - name: factorbook-api
        image: gcr.io/devenv-215523/genome-almanac-api:${SERVICE_VERSION}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: factorbook-api-service
  labels:
    app: factorbook-api
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: factorbook-api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: factorbook-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "factorbook-api-external-ip"
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: "factorbook-api-cert"
spec:
  backend:
    serviceName: factorbook-api-service
    servicePort: 80
